# decathlon_agilite

./: .coverage  .gitignore  .gitlab-ci.yml  Dockerfile  Documentation_Technique.md  README.md  decathlon.db  dev-requirements.txt  mydatabase.db  pyproject.toml  requirements.txt  sonar-project.properties
decathlon/: main.py
decathlon/Controller/: health.py
decathlon/Model/: models.py
docsExternes/: Compte_Rendu.md  Definition_Of_Done.md  Documentation_Fonctionnelle.md  Documentation_Technique.md  Users_Storys.md
src/: main.py
src/Projet_Agilite.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/buisness/: worker.py
src/data/: dao.py  dto.py
src/decathlon/: connexion.py  main.py
src/decathlon/Controller/: health.py  init_bdd.py  user.py
src/decathlon/Model/: health.py  identifiable.py  models.py  unit.py  user.py
test/: test_BD.py  test_connexion.py  test_main.py
